# nbs-viewer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example_config.toml  kafka_live_plotter.py  plot_builders.py  pyproject.toml  widgets.py
.github/workflows/: python-publish.yml
nbs_viewer/: catalogModel.py  catalogTable.py  catalogTree.py  catalogView.py  dataList.py  dataSource.py  dataSourceManager.py  datasource.py  kafkaRunModel.py  listTableModel.py  logging_setup.py  mainWidget.py  plotCanvas.py  plotControl.py  plotItem.py  plotList.py  plotManager.py  runDisplay.py  runModel.py  search.py  utils.py  viewer.py
nbs_viewer/models/: app_model.py
nbs_viewer/models/catalog/: base.py  bluesky.py  catalogModel.py  catalogTable.py  chunkCache.py  kafka.py  source_models.py  table.py  worker_pool.py
nbs_viewer/models/data/: __init__.py  base.py  bluesky.py  combined.py  kafka.py  nbs.py
nbs_viewer/models/plot/: canvasManager.py  combinedRunModel.py  displayManager.py  displayRegistry.py  plotDataModel.py  plotModel.py  plot_data.py  runData.py  runListModel.py  runModel.py  run_controller.py  run_line_model.py  run_state_model.py
nbs_viewer/views/: canvasRunList.py  dataSource.py  dataSourceSwitcher.py  runListView.py
nbs_viewer/views/catalog/: base.py  canvasRunList.py  catalogTree.py  catalogView.py  kafka.py
nbs_viewer/views/common/: panel.py
nbs_viewer/views/dataSource/: dataSource.py  dataSourceSwitcher.py  runListView.py  tiledAuth.py
nbs_viewer/views/display/: displayControl.py  displayRegistry.py  mainDisplay.py  plotDisplay.py
nbs_viewer/views/plot/: canvasControl.py  canvasTab.py  imageGridWidget.py  metadataView.py  plotControl.py  plotDimensionWidget.py  plotWidget.py  run_display.py  transform_controls.py  widget_registry.py
nbs_viewer/views/plot/controls/: auto_add.py  base.py  dynamic_update.py  plotControl.py  retain_selection.py  run_display.py  transform.py
nbs_viewer/widgets/: kafkaViewerTab.py
sst_viewer/: datasource.py  runDisplay.py  viewer.py
ucal_liveplot/: catalogTable.py  datasource.py  imageDisplay.py  plotCanvas.py  plotItem.py  runDisplay.py  search.py  viewer.py
