[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nbs-viewer"
description = "A simple Tiled viewer application."
dynamic = ["version"]
authors = [{ name = "Charles Titus", email = "ctitus@bnl.gov" }]
readme = "README.md"
keywords = ["SST", "viewer"]
dependencies = [
"numpy",
"qtpy",
"matplotlib",
"tiled >= 0.1.0a105",
"bluesky-widgets >= 0.0.15",
"nslsii",
"databroker >= 2.0.0a105",
"asteval",
]

[project.scripts]
nbs-viewer = "nbs_viewer.viewer:main"

[tool.setuptools]
packages = ["nbs_viewer"]

[tool.setuptools_scm]