[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nbs-viewer"
description = "A simple viewer application for data stored in a Blueksy-Tiled database."
dynamic = ["version"]
authors = [{ name = "Charles Titus", email = "ctitus@bnl.gov" }]
readme = "README.md"
keywords = ["tiled", "viewer"]
dependencies = [
"numpy",
"qtpy",
"matplotlib",
"tiled >= 0.1.0a105",
"bluesky-widgets >= 0.0.15",
"nslsii",
"databroker[client,server,back-compat] >= 2.0.0a105",
"asteval",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/xraygui/nbs-viewer"
Issues = "https://github.com/xraygui/nbs-viewer/issues"

[project.scripts]
nbs-viewer = "nbs_viewer.viewer:main"

[tool.setuptools]
packages = ["nbs_viewer"]

[tool.setuptools_scm]

[project.entry-points."nbs_viewer.catalog_models"]
blueskycatalog = "nbs_viewer.models.catalog.bluesky:BlueskyCatalog"
nbscatalog = "nbs_viewer.models.catalog.bluesky:NBSCatalog"

[project.entry-points."nbs_gui.tabs"]
nbs-viewer-kafka = "nbs_viewer.widgets.kafkaViewerTab:KafkaViewerTab"